2011-11-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (timer_project_stoped_handler): update the projects
	tree entry for the stoped project

2011-11-29  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (projects_tree_row_activated): activate single or
	multiple projects based on CTRL key activation
	(main_window_key_released): track CTRL key state so CTRL+<double
	click> on a project will activate it without affect the other
	running projects

2009-11-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (app_new): Add signal handlers to update the projects
	tree when projects ares started/stoped.

2009-10-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (init_timer): connect the signal handlers for the
	project_started and project_stoped signals of the
	GttRunningProjects object.
	(timer_project_stoped_handler, timer_project_started_handler):
	handlers for the GttRunningProjects signals. Start or stop themain
	timer according to the recieved signals and current number of
	running projects.

2009-10-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/active-dialog.c, src/active-dialog.h, src/app.c, src/app.h,
	src/cur-proj.h, src/file-io.c, src/file-io.h, src/gconf-io.c,
	src/gconf-io.h, src/idle-dialog.c, src/idle-dialog.h, src/log.c,
	src/main.c, src/menucmd.c/ src/timer.c, src/timer.h: Initial
	changes to use the running-projects module instead of the global
	"cur_proj" variable.

	* src/running-projects.c, src/running-projects.h: Implemented
	module to keep track of the set of running projects.

2009-09-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.h, src/proj.c (gtt_project_cmp), src/projects-tree.c:
	moved the project_cmp function from the projects-tree.c to
	the proj.c module.

2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
	Check that the column_references tree is not NULL before calling